@@ -1,14 +1,5 @@
 #!/usr/bin/env python
 # -*- coding: utf-8 -*-
-"""
-    openslides.__main__
-    ~~~~~~~~~~~~~~~~~~~
-
-    Main script for OpenSlides
-
-    :copyright: 2011–2013 by OpenSlides team, see AUTHORS.
-    :license: GNU GPL, see LICENSE for more details.
-"""
 
 import argparse
 import os
