@@ -1,15 +1,3 @@
 # -*- coding: utf-8 -*-
-"""
-    openslides.agenda
-    ~~~~~~~~~~~~~~~~~
-
-    The OpenSlides agenda app appends the functionality to OpenSlides to
-    manage agendas.
-
-    It includes time-management and lists of speakers.
-
-    :copyright: (c) 2011–2013 by the OpenSlides team, see AUTHORS.
-    :license: GNU GPL, see LICENSE for more details.
-"""
 
 from . import signals, slides  # noqa
