@@ -1,4 +1,7 @@
+# -*- coding: utf-8 -*-
+
 from haystack import indexes
+
 from .models import Item
 
 
