@@ -1,14 +1,4 @@
-#!/usr/bin/env python
 # -*- coding: utf-8 -*-
-"""
-    openslides.config.models
-    ~~~~~~~~~~~~~~~~~~~~~~~~
-
-    Models for the config app.
-
-    :copyright: 2011–2013 by OpenSlides team, see AUTHORS.
-    :license: GNU GPL, see LICENSE for more details.
-"""
 
 from django.db import models
 from django.utils.translation import ugettext_noop
