@@ -1,13 +1,3 @@
-#!/usr/bin/env python
 # -*- coding: utf-8 -*-
-"""
-    openslides.core
-    ~~~~~~~~~~~~~~~
-
-    The core app.
-
-    :copyright: (c) 2011–2013 by the OpenSlides team, see AUTHORS.
-    :license: GNU GPL, see LICENSE for more details.
-"""
 
 from . import signals  # noqa
