@@ -1,14 +1,4 @@
-#!/usr/bin/env python
 # -*- coding: utf-8 -*-
-"""
-    openslides.core.signals
-    ~~~~~~~~~~~~~~~~~~~~~~~
-
-    Signals for the core app.
-
-    :copyright: (c) 2011–2013 by the OpenSlides team, see AUTHORS.
-    :license: GNU GPL, see LICENSE for more details.
-"""
 
 from django import forms
 from django.dispatch import receiver, Signal
