@@ -1,14 +1,4 @@
-#!/usr/bin/env python
 # -*- coding: utf-8 -*-
-"""
-    openslides.utils.templatetags.tags
-    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-    Template tags for OpenSlides
-
-    :copyright: 2011, 2012 by OpenSlides team, see AUTHORS.
-    :license: GNU GPL, see LICENSE for more details.
-"""
 
 import warnings
 
